--- a/views/pages/admin/ordertable.ejs
+++ b/views/pages/admin/ordertable.ejs
@@ -17,13 +17,13 @@
       <div class="table-responsive">
         <input type="text" class="form-control" id="searchbar" placeholder="Search Data..." style="margin-bottom: 20px; background-color: wheat;"/>
         <!-- Table -->
-        <table class="table table-striped table-bordered" id="Table">
+        <table class="table table-striped table-bordered text-center" id="Table">
           <tr>
-            <th style="width: 10%;">หลักฐานการชำระ</th>
-            <th style="width: 30%;">Status</th>
-            <th style="width: 20%;">Total</th>
-            <th style="width: 20%;">Quantity</th>
-            <th style="width: 30%;">OrderId</th>
+            <th class="text-center" style="width: 10%;">หลักฐานการชำระ</th>
+            <th class="text-center" style="width: 30%;">สภานะ</th>
+            <th class="text-center" style="width: 20%;">มูลค่า</th>
+            <th class="text-center" style="width: 20%;">จำนวนสิ่งของ</th>
+            <th class="text-center" style="width: 30%;">Order Id</th>
           </tr>
           <tbody id="dataTable">
             
@@ -34,7 +34,7 @@
   </div>
 </div>
 
-<div class="modal" tabindex="-1" id="action_modal">
+<dialog class="modal" tabindex="-1" id="action_modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <form method="post" id="form">
@@ -61,7 +61,7 @@
       </form>
     </div>
   </div>
-</div>
+</dialog>
 
 
 <script src="/js/order_script.js"></script>
