--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -1,14 +1,14 @@
 
 
 <div class="container" style="padding: 25px">
-  <table id="cart" class="table" style="background-color: white; border: 100px; border-radius: 25px;">
+  <table id="cart" class="table table-striped table-bordered text-center"  style="background-color: white; border: 100px; border-radius: 25px;">
     <thead>
       <tr>
-        <th style="width: 50%">Product</th>
-        <th style="width: 10%">Price</th>
-        <th style="width: 8%">Quantity</th>
-        <th style="width: 22%" class="text-center">Subtotal</th>
-        <th style="width: 10%"></th>
+        <th class="text-center"  style="width: 50%">สินค้า</th>
+        <th class="text-center" style="width: 10%">ราคา</th>
+        <th class="text-center" style="width: 8%">ปริมาณ</th>
+        <th class="text-center" style="width: 22%" class="text-center">รวม</th>
+        <th class="text-center" style="width: 10%"></th>
       </tr>
     </thead>
     <form action="/cart/delete" method="post">
