new navbar and drawer/ fix fome bugs

--- a/views/pages/admin/tree.ejs
+++ b/views/pages/admin/tree.ejs
@@ -4,9 +4,10 @@
 <%-include("../partials/pagination.ejs")-%>
 
 
-<input type="text" class="form-control" id="searchbar" placeholder="Search Data..." style="margin-bottom: 20px; background-color: wheat;"/>
 
 <div class="container dashboard" style="padding: 25px; margin-bottom: 25px; margin-top: 25px;">
+  <input type="text" class="input input-bordered border-opacity-100 w-full max-w-lg bg-slate-100 mx-20 mb-12" id="searchbar" placeholder="Search Data..."/>
+
   <div class="row" id="tree">
   </div>
 </div>
