--- a/views/partials/bars/nonuserbar.ejs
+++ b/views/partials/bars/nonuserbar.ejs
@@ -1,8 +1,14 @@
+<li >
 <a
   href="/login"
-  class="btn btn-ghost btn-sm rounded-btn">Login</a
+  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3">Login</span></a
 >
-<a
+</li>
+
+<li>
+  <a
   href="/register"
-  class="btn btn-ghost btn-sm rounded-btn">Register</a
+  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3">Register</span></a
 >
+</li>
+
