--- a/views/partials/bars/userbar.ejs
+++ b/views/partials/bars/userbar.ejs
@@ -1,23 +1,33 @@
-<a
+<li><a
   href="/"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="glyphicon glyphicon-home"></span></span> HOME</a
->
+  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><span class="glyphicon glyphicon-home "></span> HOME</span></a
+></li>
 
-<a
+<li><a
   href="/user"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> User</a
->
-<a
+  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><span class="glyphicon glyphicon-user "></span> User</span></a
+></li>
+
+<li><a
   href="/order"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Order</a
->
-<a
+  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><span class="glyphicon glyphicon-list-alt "></span> Order</span></a
+></li>
+
+<li><a
   href="/money"
-  class="btn btn-ghost btn-lg rounded-btn"><div class="badge badge-lg ml-2"><%=wallet.money%></div>บาท</a
->
-<a
+  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><div class="badge badge-lg"><%=wallet.money%></div> BATH</span></a
+></li>
+
+<li><a
   href="/cart"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>(
-    <div class="badge badge-lg ml-2"><%if(total){%><%=total%><%}else{%>0<%}%></div> บาท ) </a
->
+  class="btn btn-ghost btn-lg rounded-btn"><span class="glyphicon glyphicon-shopping-cart mt-2"></span><span class="mt-3">(
+    <div class="badge badge-lg"><%if(total){%><%=total%><%}else{%>0<%}%></div> BATH )</span> </a
+></li>
+
+<li >
+  <a
+    href="/logout"
+    class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3">Logout</span></a
+  >
+  </li>
 
