--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,57 +1,20 @@
-<div class="navbar mb-2 shadow-lg bg-neutral text-neutral-content">
-  <div class="flex-none px-2 mx-2">
-    <img class="w-auto h-20" src="\images\logo1.svg">
-  </div>
-  <div class="flex-1 px-2 mx-2">
-    <div class="block" style="@media (max-width: 767px){display: none;}">
-      <%if(user){%> <%if(user.isAdmin){%> <%-include("bars/adminbar")-%>
-      <%}else{%> <%-include("bars/userbar", {wallet: wallet||null})-%> <%}%>
-      <%}else{%> <%-include("bars/nonuserbar")-%> <%}%>
-    </div>
-  </div>
-  <div class="flex-none">
-    <div class="dropdown dropdown-end">
-      <div tabindex="0" class="btn btn-ghost rounded-btn">
-        <img class="w-auto h-10" src="/images/666201.png">
+<div class="drawer">
+  <input id="my-drawer-3" type="checkbox" class="drawer-toggle" /> 
+  <div class="drawer-content flex flex-col">
+    <!-- Navbar -->
+    <div class="w-full navbar bg-base-300">
+      <div class="flex-none lg:hidden">
+        <label for="my-drawer-3" class="btn btn-square btn-ghost">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-6 h-6 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+        </label>
+      </div> 
+      <div class="flex-none px-2 mx-2">
+        <img class="w-auto h-20" src="\images\logo1.svg">
       </div>
-      <ul
-        tabindex="3"
-        class="p-2 shadow menu dropdown-content bg-base-100 rounded-box w-52"
-      >
-      <%if(user){%>
-        <li>  <a
-          href="/user"
-          class="block px-4 py-2 text-xl"
-          role="menuitem"
-          tabindex="-1"
-          id="user-menu-item-0"
-          >Your Profile</a
-        ></li>
-        <li>
-          <a
-          href="/logout"
-          class="block px-4 py-2 text-xl"
-          role="menuitem"
-          tabindex="-1"
-          id="user-menu-item-2"
-          >Sign out</a
-        >
-        </li>
-      
-        <%}else{%>
-          <li>
-            <a
-            href="/login"
-            class="block px-4 py-2 text-xl"
-            role="menuitem"
-            tabindex="-1"
-            id="user-menu-item-2"
-            >Login</a
-          >
-          </li><%}%>
-      </ul>
-    </div>
-  </div>
-</div>
-
-
+      <div class="hidden sm:block">
+        <ul class="menu menu-horizontal">
+          <%if(user){%> <%if(user.isAdmin){%> <%-include("bars/adminbar")-%>
+          <%}else{%> <%-include("bars/userbar", {wallet: wallet||null})-%> <%}%>
+          <%}else{%> <%-include("bars/nonuserbar")-%> <%}%>
+        </ul>
+      </div>
